--- a/SuperEconomicoApp/Views/CartView.xaml
+++ b/SuperEconomicoApp/Views/CartView.xaml
@@ -7,13 +7,18 @@
              xmlns:vm="clr-namespace:SuperEconomicoApp.ViewsModels"
              Visual="Material"
              BackgroundColor="#394BA7"
-             x:Name="CurrentPage">
+             x:Name="CurrentPage"
+             xmlns:converter="clr-namespace:SuperEconomicoApp.Converters">
 
     <ContentPage.Resources>
         <ResourceDictionary>
             <Converter:Base64ToImageSource x:Key="Base64ToImage" />
+            <converter:TextToBoolCOnverter x:Key="dataConverter"/>
+
         </ResourceDictionary>
     </ContentPage.Resources>
+
+
 
     <ContentPage.BindingContext>
         <vm:CartViewModel/>
@@ -27,10 +32,10 @@
         </Grid.RowDefinitions>
 
         <BoxView Grid.Row="0"/>
-        <Label Text="El Economico" FontSize="40" TextColor="WhiteSmoke"
-                   FontFamily="CabinSketch"
-                   HorizontalOptions="Center" 
-                   VerticalOptions="Center"/>
+
+        <Label  Text="El Economico" FontFamily="{StaticResource CabinSketch-Bold}"
+                   TextColor="White" FontAttributes="Bold"
+                   FontSize="55" HorizontalOptions="Center"/>
 
         <Label x:Name="LabelName" FontSize="Subtitle" TextColor="WhiteSmoke" 
                    HorizontalOptions="Center" VerticalOptions="End"/>
@@ -50,12 +55,12 @@
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition Width="130"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="30"/>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Label Text="Id" Grid.Column="0" FontSize="Subtitle"
                                        TextColor="Green"/>
@@ -67,7 +72,7 @@
                                        TextColor="Green"/>
                             <Label Text="Total" Grid.Column="4" FontSize="Subtitle"
                                        TextColor="Green"/>
-                            <Label Text="Accion" Grid.Column="5" FontSize="Subtitle"
+                            <Label Text="Acc" Grid.Column="5" FontSize="Subtitle"
                                        TextColor="Green"/>
                         </Grid>
                     </DataTemplate>
@@ -79,16 +84,16 @@
                             <ViewCell.View>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="20"/>
+                                        <ColumnDefinition Width="130"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="40"/>
+                                        <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="30"/>
-                                        <ColumnDefinition Width="100"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Image Source="{Binding ImageProduct,  Converter={StaticResource Base64ToImage}}" 
-                                               Grid.Column="0" 
-                                               HeightRequest="80"/>
+                                    <Label Text="{Binding ProductId}" Grid.Column="0" FontSize="Body"
+                                           TextColor="Green"/>
+                                    
                                     <Label Text="{Binding ProductName}" Grid.Column="1" FontSize="Body"
                                            TextColor="Green"/>
                                     <Label Text="{Binding Price}" Grid.Column="2" FontSize="Body"
@@ -99,7 +104,7 @@
                                            TextColor="Green"/>
 
                                     <Image Source="eliminar_producto_carrito.png" 
-                                               HeightRequest="20"
+                                               HeightRequest="10"
                                                Grid.Column="5">
                                         <Image.GestureRecognizers>
                                             <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.DeleteProductCommand}"
