--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -42,7 +42,6 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
@@ -89,7 +88,7 @@
                                  Command="{Binding LogoutCommand}"/>--><!--
                 </Grid>-->
 
-                <Grid Grid.Row="0" Grid.Column="0" >
+                <!--<Grid Grid.Row="0" Grid.Column="0" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
@@ -108,31 +107,35 @@
                                  BackgroundColor="Transparent"
                                  Margin="0,0,10,0" HorizontalOptions="End" 
                                  Command="{Binding SearchViewCommand}"/>
-                </Grid>
+                </Grid>-->
 
-                <!--<CollectionView ItemsSource="{Binding Categories}"
-                                Margin="0,20"
+                <CollectionView ItemsSource="{Binding Categories}"
+                                Margin="0,10"
                                 HeightRequest="125" VerticalOptions="FillAndExpand"
                                 HorizontalScrollBarVisibility="Never"
                                 ItemsLayout="HorizontalList"
                                 SelectionMode="Single"
                                 SelectionChanged="CollectionView_SelectionChanged"
-                                Grid.Row="2">
+                                Grid.Row="0"
+                                BackgroundColor="Gray"
+                               >
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout Padding="0,0,15,0">
-                                <Frame HeightRequest="50" HasShadow="False"
-                                       BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackgroundColor},
-                                       Dark={StaticResource DarkPageBackgroundColor}}" CornerRadius="10">
-                                    <Image Source="{Binding ImageUrl}"/>
-                                    
+                                <Frame CornerRadius="50"
+                                           HasShadow="False">
+                                    <sombras:Shadows CornerRadius="50"
+                                                         Shades="{sombras:SingleShade   Offset='0,12' ,Opacity=1.0,Color=#F5C2BE,BlurRadius=10}">
+                                        <Image Source="{Binding .}"
+                                                   HeightRequest="30" />
+                                    </sombras:Shadows>
                                 </Frame>
                                 <Label Text="{Binding CategoryName}" HorizontalTextAlignment="Center"
                                        Style="{StaticResource SecondaryLabel}"/>
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
-                </CollectionView>-->
+                </CollectionView>
 
                 <!--<Label Grid.Row="3" Text="Ultimos Productos" FontSize="25" FontAttributes="Bold" Style="{StaticResource PrimaryLabelHeader}"/>-->
 
@@ -142,7 +145,7 @@
                                 x:Name="CVLatest"
                                 SelectionChanged="CVLatest_SelectionChanged"
                                 SelectionMode="Single"
-                                Grid.Row="4">
+                                Grid.Row="3">
 
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="20" HorizontalItemSpacing="20" Span="2" />
@@ -150,7 +153,7 @@
 
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Frame CornerRadius="10"   >
+                            <Frame   >
                                 <Grid WidthRequest="145" HeightRequest="170" BackgroundColor="White" >
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto"/>
@@ -195,17 +198,17 @@
             </Grid>
 
             <StackLayout Orientation="Horizontal"
-                     Grid.Row="4"
-                     HeightRequest="25"
-                     Margin="20,20,20,10">
+                     HeightRequest="28"
+                     Margin="30,10, 30,10"
+                     Spacing="50">
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=Purple}">
-                    <Image Source="homePurple.png" />
+                    <Image Source="homePurple.png" HeightRequest="28"/>
                 </sombras:Shadows>
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=Purple}"
                              HorizontalOptions="CenterAndExpand">
-                    <Image Source="gpsPurple.png">
+                    <Image Source="gpsPurple.png" HeightRequest="28">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding ViewDirectionCommand}"/>
                         </Image.GestureRecognizers>
@@ -215,7 +218,7 @@
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=Purple}"
                              HorizontalOptions="CenterAndExpand">
-                    <Image Source="comprasPurple.png">
+                    <Image Source="comprasPurple.png" HeightRequest="28">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer   Command="{Binding ViewCartCommand}"/>
                         </Image.GestureRecognizers>
@@ -225,7 +228,7 @@
                 <sombras:Shadows CornerRadius="10"
                              Shades="{sombras:SingleShade Offset='0,0' ,Opacity=0.6,Color=Purple}"
                              HorizontalOptions="CenterAndExpand">
-                    <Image Source="listaPurple.png">
+                    <Image Source="listaPurple.png" HeightRequest="28">
                         <Image.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding OrdersHistoryCommand}"/>
                         </Image.GestureRecognizers>
