--- a/SuperEconomicoApp/Views/ShowOrderDetailView.xaml
+++ b/SuperEconomicoApp/Views/ShowOrderDetailView.xaml
@@ -4,7 +4,15 @@
              xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              x:Class="SuperEconomicoApp.Views.ShowOrderDetailView"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
+             xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
              BackgroundColor="#EFF0F0">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Converter:Base64ToImageSource x:Key="Base64ToImage" />
+            <Converter:ByteArrayToImage x:Key="ByteToImage" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout>
         <StackLayout HeightRequest="480">
@@ -29,11 +37,11 @@
                             <StackLayout Orientation="Horizontal"
                                      Margin="10,0,0,8">
                                 <controls:CircleImage 
-                                Source="person2"
-                                HeightRequest="45"
-                                HorizontalOptions="Center"
-                                BorderColor="Purple"  
-                                BorderThickness="1"/>
+                                    Source="{Binding ImageDelivery,  Converter={StaticResource ByteToImage}}"
+                                    HeightRequest="45"
+                                    HorizontalOptions="Center"
+                                    BorderColor="Purple"  
+                                    BorderThickness="1"/>
 
                                 <StackLayout>
                                     <Label Text="{Binding NameDelivery}"
@@ -106,7 +114,7 @@
                                CornerRadius="4"
                                HasShadow="False">
                                     <StackLayout Orientation="Horizontal">
-                                        <Image Source="productoCarne11"
+                                        <Image Source="{Binding image_product,  Converter={StaticResource Base64ToImage}}"
                                            HeightRequest="70"
                                            WidthRequest="70"/>
                                         <StackLayout VerticalOptions="Center">
