--- a/SuperEconomicoApp/Views/TabbedOrder/OrderHistoryView.xaml
+++ b/SuperEconomicoApp/Views/TabbedOrder/OrderHistoryView.xaml
@@ -2,12 +2,127 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SuperEconomicoApp.Views.TabbedOrder.OrderHistoryView"
-             Title="Historial">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="HISTORIAL DE PEDIDOS"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+             Title="Historial"
+             x:Name="CurrentPage"
+             BackgroundColor="#EFF0F0">
+    <ContentPage.Resources>
+        <Style TargetType="BoxView"
+               x:Key="SeparadorBoxview">
+            <Setter Property="HeightRequest"
+                    Value="1" />
+            <Setter Property="BackgroundColor"
+                    Value="#7A7A7A" />
+            <Setter Property="Opacity"
+                    Value="0.1" />
+        </Style>
+    </ContentPage.Resources>
+    
+    
+    <Grid Padding="8">
+        <StackLayout IsVisible="{Binding ExistOrders}">
+            <CollectionView ItemsSource="{Binding ListOrders}"
+                        VerticalOptions="CenterAndExpand">
+
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Orientation="Vertical"
+                                 Span="1"
+                                 VerticalItemSpacing="5"/>
+                </CollectionView.ItemsLayout>
+
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame BackgroundColor="White"
+                           CornerRadius="4"
+                               HasShadow="False">
+                            <StackLayout>
+                                <StackLayout Orientation="Horizontal">
+
+                                    <Label Text="{Binding status}"
+                                       FontSize="13"
+                                       FontAttributes="Bold"
+                                       TextColor="#CB4335"/>
+
+                                    <Label Text="{Binding order_date}"
+                                               FontSize="14"
+                                               FontAttributes="Italic"
+                                               HorizontalOptions="EndAndExpand"/>
+
+                                </StackLayout>
+                                
+
+                                <StackLayout Orientation="Horizontal">
+                                    <Image Source="icon_historial.png"
+                                           WidthRequest="45"
+                                           HeightRequest="45"/>
+                                    <StackLayout Margin="15,0,0,0">
+                                        <Label Text="El Economico"
+                                               FontSize="18"
+                                               FontAttributes="Bold"/>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label Text="{Binding total, StringFormat='L. {0:F0}.00'}"
+                                               FontSize="16"
+                                               FontAttributes="Italic"/>            
+                                            <Label Text="{Binding payment_type, StringFormat='- {0:F0}'}"
+                                               FontSize="15"
+                                               FontAttributes="Bold"/>
+                                        </StackLayout>
+
+                                    </StackLayout>
+                                </StackLayout>
+                                
+                                <BoxView Style="{StaticResource SeparadorBoxview}" Margin="0,0,0,3" />
+
+                                <StackLayout Orientation="Horizontal">
+
+                                    <Button Text="Ver opinión"
+                                            FontSize="12"
+                                            VerticalOptions="Center"
+                                            HorizontalOptions="Start"
+                                            CornerRadius="15"
+                                            BackgroundColor="#F7F4F4"
+                                            TextColor="#B9B6BB"
+                                            TextTransform="None"
+                                            FontAttributes="Bold"
+                                            WidthRequest="155"
+                                            Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.ShowCommentCommand}"
+                                            CommandParameter="{Binding .}"/>
+
+                                    <Button Text="Ver calificación"
+                                            FontSize="12"
+                                            VerticalOptions="Center"
+                                            HorizontalOptions="EndAndExpand"
+                                            CornerRadius="15"
+                                            BackgroundColor="#F7F4F4"
+                                            TextColor="#B9B6BB"
+                                            TextTransform="None"
+                                            FontAttributes="Bold"
+                                            WidthRequest="155"
+                                            Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.ShowScoreCommand}"
+                                            CommandParameter="{Binding .}"/>
+
+                                </StackLayout>
+
+                            </StackLayout>
+
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.OrderDetailCommand}"
+                                                          CommandParameter="{Binding .}"/>
+                            </Frame.GestureRecognizers>
+
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
-    </ContentPage.Content>
+
+        <StackLayout IsVisible="{Binding NotExistOrders}" VerticalOptions="Center">
+            <Image Source="list_empty_history.png"
+                   WidthRequest="100"/>
+            <Label Text="No tienes historial de pedidos" 
+                   HorizontalTextAlignment="Center"
+                   FontSize="23"
+                   TextColor="#212F3D"
+                   FontAttributes="Bold"/>
+        </StackLayout>
+    </Grid>
 </ContentPage>
