Arreglando errores de ejecucion porque VS no incluye ciertas imagenes

--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -117,8 +117,7 @@
                                 SelectionMode="Single"
                                 SelectionChanged="CollectionView_SelectionChanged"
                                 Grid.Row="0"
-                                BackgroundColor="Gray"
-                               >
+                                BackgroundColor="Gray">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout Padding="0,0,15,0">
