Llamar delivery, click en mapa y llenado automatico de la descripcion del mapa segun ubicacion seleccionada

--- a/SuperEconomicoApp/Views/ShowOrderDetailView.xaml
+++ b/SuperEconomicoApp/Views/ShowOrderDetailView.xaml
@@ -16,7 +16,7 @@
 
     <StackLayout>
         <StackLayout HeightRequest="480">
-            <maps:Map x:Name="map" />
+            <maps:Map x:Name="map" MyLocationEnabled="True" />
         </StackLayout>
 
         <ScrollView>
