--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -5,9 +5,9 @@
              ios:Page.UseSafeArea="True"
              xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
-             xmlns:vm="clr-namespace:SuperEconomicoApp.ViewsModels"
              x:Class="SuperEconomicoApp.Views.ProductsView"
              xmlns:sombras="clr-namespace:Sharpnado.Shades;assembly=Sharpnado.Shadows"
+             xmlns:toolkit="http://xamarin.com/schemas/2020/toolkit"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              BackgroundColor="White">
     <ContentPage.Resources>
@@ -31,13 +31,10 @@
         </Style>
     </ContentPage.Resources>
 
-    <ContentPage.BindingContext>
-        <vm:ProductsViewModel/>
-    </ContentPage.BindingContext>
     <ContentPage.Content>
 
         <StackLayout>
-            <Grid Padding="15,15,15,0" >
+            <Grid Padding="12,15,12,0" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -88,28 +85,32 @@
                                  Command="{Binding LogoutCommand}"/>--><!--
                 </Grid>-->
 
-                <!--<Grid Grid.Row="0" Grid.Column="0" >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+                <StackLayout Grid.Row="0" Grid.Column="0" >
 
-                    <SearchBar Grid.Column="0" Placeholder="Buscar Producto"
+                    <SearchBar Placeholder="Buscar ..."
                                BackgroundColor="Transparent" HorizontalOptions="Fill"
                                PlaceholderColor="{AppThemeBinding Light={StaticResource LightSecondaryTextColor},
                                Dark={StaticResource DarkSecondaryTextColor}}"
                                TextColor="{AppThemeBinding Light={StaticResource LightPrimaryTextColor},
                                Dark={StaticResource DarkPrimaryTextColor}}"
-                               Text="{Binding SearchText}"/>
+                               Text="{Binding SearchText}">
 
-                    <ImageButton Grid.Column="1" 
+                        <SearchBar.Behaviors>
+                            <toolkit:EventToCommandBehavior EventName="TextChanged"
+                                                            Command="{Binding SearchProductCommand}"/>
+                        </SearchBar.Behaviors>
+                        
+                        
+                    </SearchBar>
+
+                    <!--<ImageButton Grid.Column="1" 
                                  Source="buscar"
                                  BackgroundColor="Transparent"
                                  Margin="0,0,10,0" HorizontalOptions="End" 
-                                 Command="{Binding SearchViewCommand}"/>
-                </Grid>-->
+                                 Command="{Binding SearchViewCommand}"/>-->
+                </StackLayout>
 
-                <CollectionView ItemsSource="{Binding Categories}"
+                <!--<CollectionView ItemsSource="{Binding Categories}"
                                 Margin="0,10"
                                 HeightRequest="125" VerticalOptions="FillAndExpand"
                                 HorizontalScrollBarVisibility="Never"
@@ -134,12 +135,12 @@
                             </StackLayout>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
-                </CollectionView>
+                </CollectionView>-->
 
                 <!--<Label Grid.Row="3" Text="Ultimos Productos" FontSize="25" FontAttributes="Bold" Style="{StaticResource PrimaryLabelHeader}"/>-->
 
-                <CollectionView ItemsSource="{Binding ListItemsProducts}"
-                                 VerticalOptions="Start"
+                <CollectionView 
+                                VerticalOptions="Start"
                                 VerticalScrollBarVisibility="Never"
                                 x:Name="CVLatest"
                                 SelectionChanged="CVLatest_SelectionChanged"
