Agregando evento change a CollectionView de Productos (Por error lo habia quitado)

--- a/SuperEconomicoApp/Views/ProductsView.xaml
+++ b/SuperEconomicoApp/Views/ProductsView.xaml
@@ -144,6 +144,7 @@
                 <StackLayout Grid.Row="3">
                     <CollectionView VerticalOptions="Start"
                                 VerticalScrollBarVisibility="Never"
+                                SelectionChanged="CVLatest_SelectionChanged"
                                 x:Name="CVLatest"
                                 SelectionMode="Single"
                                 IsVisible="{Binding IsVisibleProducts}">
