--- a/SuperEconomicoApp/Views/AccountUserView.xaml
+++ b/SuperEconomicoApp/Views/AccountUserView.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SuperEconomicoApp.Views.AccountUserView"
-              xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
+             xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin"
              xmlns:converter="clr-namespace:SuperEconomicoApp.Converters"
              BackgroundColor="White">
@@ -11,59 +11,69 @@
         <ResourceDictionary>
             <converter:ByteArrayToImage x:Key="ByteToImage" />
         </ResourceDictionary>
+        <Style TargetType="BoxView"
+               x:Key="SeparadorBoxview">
+            <Setter Property="HeightRequest"
+                    Value="2" />
+            <Setter Property="BackgroundColor"
+                    Value="#979797" />
+            <Setter Property="Opacity"
+                    Value="0.1" />
+        </Style>
     </ContentPage.Resources>
 
     <ContentPage.Content>
 
         <StackLayout>
-            <Frame 
+            <StackLayout>
+                <Frame 
                     HasShadow="False" 
                     BackgroundColor="White" 
-                    HeightRequest="150"
+                    HeightRequest="170"
                     CornerRadius="20" 
                     Margin="0,10"
                     Padding="20,20,0,0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
 
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
 
-                    </Grid.RowDefinitions>
-                    <pancake:PancakeView 
+                        </Grid.RowDefinitions>
+                        <pancake:PancakeView 
                                 Grid.Column="0" 
                                 Grid.Row="0" Grid.RowSpan="3"
                                 CornerRadius="12"
                                 Margin="0,0,10,0">
-                        <StackLayout>
-                            <controls:CircleImage Source="person2" IsVisible="{Binding IsImageDefault}"/>
-                            <controls:CircleImage 
+                            <StackLayout>
+                                <controls:CircleImage Source="person2" IsVisible="{Binding IsImageDefault}"/>
+                                <controls:CircleImage 
                                 Source="{Binding Image,  Converter={StaticResource ByteToImage}}"
                                 IsVisible="{Binding IsImageBD}"
                                 VerticalOptions="Center"
-                HorizontalOptions="Center"
+                                HorizontalOptions="Center"
                                 HeightRequest="100"
                                 />
-                        </StackLayout>
+                            </StackLayout>
 
-                    </pancake:PancakeView>
+                        </pancake:PancakeView>
 
-                    <Label  Grid.Row="0"
+                        <Label  Grid.Row="0"
                             Grid.Column="1" 
                             Text="Nombre: " 
                             FontSize="Subtitle"
                             TextColor="#8873b6"
                             FontAttributes="Bold"/>
 
-                    <Label 
+                        <Label 
                             Grid.Row="0"
                             Grid.Column="2"
                             Grid.ColumnSpan="2"
@@ -71,14 +81,14 @@
                             FontSize="15"
                             TextColor="#a4a7b6"/>
 
-                    <Label  Grid.Row="1"
+                        <Label  Grid.Row="1"
                             Grid.Column="1" 
                             Text="Apellido: " 
                             FontSize="Subtitle"
                             TextColor="#8873b6"
                             FontAttributes="Bold"/>
 
-                    <Label 
+                        <Label 
                             Grid.Row="1"
                             Grid.Column="2"
                             Grid.ColumnSpan="2"
@@ -86,14 +96,14 @@
                             FontSize="15"
                             TextColor="#a4a7b6"/>
 
-                    <Label  Grid.Row="2"
+                        <Label  Grid.Row="2"
                             Grid.Column="1" 
                             Text="Correo: "
                             FontAttributes="Bold"
                             FontSize="Subtitle"
                             TextColor="#8873b6"/>
 
-                    <Label 
+                        <Label 
                             Grid.Row="2"
                             Grid.Column="2"
                             Grid.ColumnSpan="2"
@@ -101,34 +111,112 @@
                             FontSize="15"
                             TextColor="#a4a7b6"/>
 
-                </Grid>
-            </Frame>
-            <Button 
-                            Text="ACTUALIZAR PERFIL" 
-                            BackgroundColor="#8873b6" 
-                            TextColor="White" 
-                            Margin="60,-15,60,0"
-                            x:Name="btnEdit"
-                            Command="{Binding EditUserCommand}"
-                            CornerRadius="20"
-                WidthRequest="200" 
-            HeightRequest="40"/>
+                    </Grid>
+                </Frame>
+                <Button Text="ACTUALIZAR PERFIL" 
+                    BackgroundColor="#8873b6" 
+                    TextColor="White" 
+                    Margin="60,-15,60,0"
+                    x:Name="btnEdit"
+                    Command="{Binding EditUserCommand}"
+                    CornerRadius="20"
+                    WidthRequest="200" 
+                    HeightRequest="40"/>
+            </StackLayout>
 
+
+            <StackLayout Padding="20">
+                <BoxView Style="{StaticResource SeparadorBoxview}" />
+                <Label Text="SELECCIONA EL DEPARTAMENTO"
+                       Margin="0,5"
+                       HorizontalTextAlignment="Center"
+                       FontAttributes="Bold"/>
+                <BoxView Style="{StaticResource SeparadorBoxview}" />
+                <Label Text="Selecionado"
+                   FontSize="14"
+                   Margin="0,0,0,10"
+                   FontAttributes="Bold"/>
+                <Frame CornerRadius="10"
+                   HasShadow="False">
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding DepartamentPreview}"
+                           FontAttributes="Bold"
+                           TextColor="White" />
+                    </StackLayout>
+                    <Frame.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#1cb5e0"
+                                      Offset="0.5" />
+                            <GradientStop Color="#36D1DC"
+                                      Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Frame.Background>
+                </Frame>
+                <BoxView Style="{StaticResource SeparadorBoxview}" />
+                <Label Text="Departamentos"
+                   FontSize="14" 
+                   FontAttributes="Bold"/>
+
+                <CollectionView ItemsSource="{Binding ListDepartment}"
+                                x:Name="listDepartmentCollection"
+                                HeightRequest="160"
+                                VerticalOptions="CenterAndExpand">
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout ItemSpacing="5"
+                                       Orientation="Vertical"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame BackgroundColor="#EFF0F0"
+                                   CornerRadius="4"
+                                   HasShadow="False"
+                                   Padding="15,12">
+                                <StackLayout Orientation="Horizontal" Margin="0,7">
+                                    <Label Text="{Binding Name}"
+                                       FontSize="18"
+                                       VerticalOptions="Center" />
+                                    <Image Source="icon_department.png"
+                                       HeightRequest="35"
+                                       WidthRequest="35"
+                                       HorizontalOptions="EndAndExpand"/>
+                                    
+                                </StackLayout>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding Path=BindingContext.SelectDeparmentCommand, Source={x:Reference listDepartmentCollection}}"
+                                                      CommandParameter="{Binding .}"/>
+                                </Frame.GestureRecognizers>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+                <Button Text="ACTUALIZAR DEPARTAMENTO" 
+                    BackgroundColor="#8873b6" 
+                    TextColor="White" 
+                    Command="{Binding UpdateDepartmentCommand}"
+                    CornerRadius="20"
+                    Margin="0,8,0,0"
+                    WidthRequest="300" 
+                    HeightRequest="40"
+                    HorizontalOptions="Center"
+                    IsEnabled="{Binding IsEnabledUpdate}"/>
+            </StackLayout>
             
-            <Frame CornerRadius="20"  Padding="3" BorderColor="Transparent"  Margin="20">
-                <StackLayout Orientation="Horizontal" >
-                    <Image Source="salida1" 
+            
+            <StackLayout VerticalOptions="EndAndExpand">
+                <Frame CornerRadius="20"  Padding="3" BorderColor="Transparent" Margin="20,20,20,10">
+                    <StackLayout Orientation="Horizontal" >
+                        <Image Source="salida1" 
                                HorizontalOptions="Start" 
                                VerticalOptions="Center"
                                Aspect="AspectFit"
-                               HeightRequest="20"
-                           >
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
+                               HeightRequest="20">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
+                            </Image.GestureRecognizers>
+                        </Image>
 
-                    <Button 
+                        <Button 
                             Text="Cerrar Sesion" 
                             BackgroundColor="Transparent"
                             FontSize="Small"
@@ -136,19 +224,19 @@
                             Command="{Binding LogoutCommand}"
                             CornerRadius="20"
                             HorizontalOptions="Center"/>
-                    <Image Source="flecha" 
+                        <Image Source="flecha" 
                                HorizontalOptions="EndAndExpand" 
                                VerticalOptions="Center"
                                Aspect="AspectFit"
-                               HeightRequest="20"
-                           >
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
+                               HeightRequest="20">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding LogoutCommand}"/>
+                            </Image.GestureRecognizers>
+                        </Image>
 
-                </StackLayout>
-            </Frame>
+                    </StackLayout>
+                </Frame>
+            </StackLayout>
         </StackLayout>
 
     </ContentPage.Content>
