--- a/SuperEconomicoApp/Views/TabbedOrder/OrderHistoryView.xaml
+++ b/SuperEconomicoApp/Views/TabbedOrder/OrderHistoryView.xaml
@@ -73,11 +73,11 @@
 
                                 <BoxView Style="{StaticResource SeparadorBoxview}" Margin="0,0,0,5" />
 
-                                <Button Text="Ver opinión"
+                                <Button Text="{Binding NameButton}"
                                         FontSize="12"
                                         VerticalOptions="Center"
                                         HorizontalOptions="CenterAndExpand"
-                                        CornerRadius="15"
+                                        CornerRadius="8"
                                         BackgroundColor="#8873b6" 
                                         TextColor="White" 
                                         TextTransform="None"
@@ -85,7 +85,7 @@
                                         WidthRequest="200"
                                         Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.ShowCommentCommand}"
                                         CommandParameter="{Binding .}"/>
-
+                                
                             </StackLayout>
 
                             <Frame.GestureRecognizers>
