--- a/SuperEconomicoApp/Views/TabbedOrdersView.xaml
+++ b/SuperEconomicoApp/Views/TabbedOrdersView.xaml
@@ -3,7 +3,19 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
             xmlns:local="clr-namespace:SuperEconomicoApp.Views.TabbedOrder"
             x:Class="SuperEconomicoApp.Views.TabbedOrdersView"
-            Visual="Material">
+            Visual="Material"
+            BackgroundColor="Purple">
+
+    <TabbedPage.Resources>
+        <Style TargetType="TabbedPage"                
+           ApplyToDerivedTypes="True">
+
+            <Setter Property="BarBackgroundColor"
+                Value="Purple"/>
+            <Setter Property="BarTextColor"
+                Value="White"/>
+        </Style>
+    </TabbedPage.Resources>
 
     <local:ActiveOrdersView />
     <local:OrderHistoryView />
