--- a/SuperEconomicoApp/Views/ProductDetailsView.xaml
+++ b/SuperEconomicoApp/Views/ProductDetailsView.xaml
@@ -4,6 +4,7 @@
              xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
              xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              x:Class="SuperEconomicoApp.Views.ProductDetailsView"
+             xmlns:controls="clr-namespace:SuperEconomicoApp.Controls;assembly=SuperEconomicoApp"
              Visual="Material"
               BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackgroundColor}, Dark={StaticResource DarkPageBackgroundColor}}">
 
@@ -30,14 +31,16 @@
                    Source="{Binding SelectedProductoItem.Image,  Converter={StaticResource Base64ToImage}}"
                    Aspect="AspectFit"
                    VerticalOptions="Start"
-                   BackgroundColor="Gold"/>
+                   BackgroundColor="White"
+                   
+                   />
 
             <Label Grid.Row="1" 
                    Text="{Binding SelectedProductoItem.Name}"
-                   TextColor="White"
+                   TextColor="Black"
                    FontAttributes="Bold" 
                    FontSize="35" 
-                   Margin="25,-85,0,0"/>
+                   Margin="25,-50,0,0"/>
 
             <Label Text="&#xf060;" FontFamily="{StaticResource FontAwesome6Free-Solid-900}" FontSize="30" Grid.Row="0" HorizontalOptions="Start"
                    VerticalOptions="Start" Margin="10,30" BackgroundColor="Transparent" x:Name="lblIcono"/>
@@ -140,40 +143,48 @@
             <StackLayout Orientation="Horizontal"
                          Grid.Row="4">
 
-                <pancake:PancakeView CornerRadius="0,20,60,0"
-                                     HorizontalOptions="Center">
+                <!--<pancake:PancakeView CornerRadius="0,20,60,0"
+                                     HorizontalOptions="Center">-->
                     <Button Text="Agregar al Carrito" 
                             BackgroundColor="{AppThemeBinding Light={StaticResource LightDefaultButtonColor},
                                Dark={StaticResource DarkDefaultButtonColor}}"
                             WidthRequest="200" 
                             HorizontalOptions="Center"
                             Command="{Binding AddToCartCommand}"
-                            HeightRequest="50"/>
-                </pancake:PancakeView>
+                            HeightRequest="50"
+                            CornerRadius="8"
+                            Margin="10,0,0,0"/>
+                <!--</pancake:PancakeView>-->
 
-                <pancake:PancakeView CornerRadius="0,20,60,0"
-                                     HorizontalOptions="Center">
+                <!--<pancake:PancakeView CornerRadius="0,20,60,0"
+                                     HorizontalOptions="Center">-->
 
                     <Button Text="Ver Carrito" 
                             BackgroundColor="{AppThemeBinding Light={StaticResource LightDefaultButtonColor},
                                Dark={StaticResource DarkDefaultButtonColor}}"
-                            WidthRequest="200" 
+                            WidthRequest="190" 
                             HorizontalOptions="Center"
                             Command="{Binding ViewCartCommand}"
-                            HeightRequest="50"/>
-                </pancake:PancakeView>
+                            HeightRequest="50"
+                            CornerRadius="8"
+                             Margin="0,0,10,0"/>
+                <!--</pancake:PancakeView>-->
 
             </StackLayout>
 
-            <pancake:PancakeView Grid.Row="6" 
-                                 CornerRadius="60,60,0,0">
+            <!--<pancake:PancakeView Grid.Row="6" 
+                                 CornerRadius="60,60,0,0">-->
 
                 <Button Text="Inicio" 
+                        Grid.Row="6" 
                         BackgroundColor="{AppThemeBinding Light={StaticResource LightInfoButtonColor},
                                Dark={StaticResource DarkInfoButtonColor}}"
                         HeightRequest="50"
-                        Command="{Binding HomeCommand}"/>
-            </pancake:PancakeView>
+                        Command="{Binding HomeCommand}"
+                        CornerRadius="20"
+                         Margin="10,0,10,0"/>
+            <!--</pancake:PancakeView>-->
+
 
         </Grid>
     </ContentPage.Content>
